--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,12 +1,13 @@
 <!--------------------Section Customers Reviews------------------->
 <section class="reviews__section" id="reviews">
-<h2 class="reviews__title visually-hidden">Customers Reviews</h2>
-<article class="customers-reviews">
+<h2 class="reviews-section__title visually-hidden">Customers Reviews Section</h2>
 <div class="wrapper container">
         <div class="swiper mySwiper">
             <div class="slider swiper-wrapper">
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/dima@1x.jpg 1x, ./images/common/dima@2x.jpg 2x" alt="Dmitry's photo"
+                    <article class="customers-reviews">
+                        <h3 class="customers-reviews__title visually-hidden">Customers Reviews</h3>
+                    <img srcset="./images/common/dima@1x.jpg 1x, ./images/common/dima@2x.jpg 2x" src="./images/common/dima@1x.jpg" alt="Dmitry's photo"
                             class="reviews__photo">
                        <div class="review__thumb">
                            <p class="review__text">The way site navigation designed is simple and convenient. The using experience is extremely pleasant.Just a look at this ice cream makes me want a whole lot of it. The way it is served is incredible.</p>
@@ -14,10 +15,13 @@
                        <div class="reviews-dots">
                         <span></span>
                        </div>
-                       <p class="reviwers-data">Dmitriy Belousov, Kyiv</p>                 
+                       <p class="reviwers-data">Dmitriy Belousov, Kyiv</p>
+                    </article>                 
                 </div>
                 <div class="slider-item swiper-slide">
-                   <img srcset="./images/common/yurii@1x.jpg 1x, ./images/common/yurii@2x.jpg 2x" alt="Yuri's photo"
+                    <article class="customers-reviews">
+                        <h3 class="customers-reviews__title visually-hidden">Customers Reviews</h3>
+                   <img srcset="./images/common/yurii@1x.jpg 1x, ./images/common/yurii@2x.jpg 2x" src="./images/common/yurii@1x.jpg" alt="Yuri's photo"
                         class="reviews__photo">
                         <div class="review__thumb">
                             <p class="review__text">Simple interior, friendly service. Good selection of quality ice cream. I tried chocolate, very tasty, pleasant bitter
@@ -27,9 +31,12 @@
                             <span class="review-dot"></span>
                         </div>
                         <p class="reviwers-data">Yurii Krasnobokiy, Kyiv</p>
+                    </article>
                     </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/ilona@1x.jpg 1x, ./images/common/ilona@2x.jpg 2x" alt="Ilona's photo"
+                    <article class="customers-reviews">
+                        <h3 class="customers-reviews__title visually-hidden">Customers Reviews</h3>
+                    <img srcset="./images/common/ilona@1x.jpg 1x, ./images/common/ilona@2x.jpg 2x" src="./images/common/ilona@1x.jpg" alt="Ilona's photo"
                             class="reviews__photo">
                             <div class="review__thumb">
                                 <p class="review__text">I love ice cream very much, so I always buy something new and try it. And of course, I have always had favorites for
@@ -39,9 +46,12 @@
                                 <span class="review-dot"></span>
                             </div>
                             <p class="reviwers-data">Ilona Ursuliak, Kyiv</p>
+                        </article>
                 </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/tanya@1x.jpg 1x, ./images/common/tanya@2x.jpg 2x" alt="Tatiana's photo"
+                    <article class="customers-reviews">
+                        <h3 class="customers-reviews__title visually-hidden">Customers Reviews</h3>
+                    <img srcset="./images/common/tanya@1x.jpg 1x, ./images/common/tanya@2x.jpg 2x" src="./images/common/tanya@1x.jpg" alt="Tatiana's photo"
                             class="reviews__photo"><div class="review__thumb">
                                 <p class="review__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
                                     accumsan
@@ -51,9 +61,12 @@
                                 <span class="review-dot"></span>
                             </div>
                             <p class="reviwers-data">Tatiana Yarchenko, Kyiv</p>
+                        </article>
                 </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/valera@1x.jpg 1x, ./images/common/valera@2x.jpg 2x" alt="Valery's photo"
+                    <article class="customers-reviews">
+                        <h3 class="customers-reviews__title visually-hidden">Customers Reviews</h3>
+                    <img srcset="./images/common/valera@1x.jpg 1x, ./images/common/valera@2x.jpg 2x" src="./images/common/valera@1x.jpg" alt="Valery's photo"
                             class="reviews__photo"><div class="review__thumb">
                                 <p class="review__text">After trying the product of this cafe, I was satisfied. Ice cream melts gently
                                 on the tongue. Instead of incomprehensible jam, natural fruits and berries are felt. I will go here often and recommend
@@ -63,9 +76,12 @@
                                 <span class="review-dot"></span>
                             </div>
                             <p class="reviwers-data">Valerii Surdolenko, Kyiv</p>
+                        </article>
                 </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/vlad@1x.jpg 1x, ./images/common/vlad@2x.jpg 2x" alt="Vladislav`s photo"
+                    <article class="customers-reviews">
+                        <h3 class="customers-reviews__title visually-hidden">Customers Reviews</h3>
+                    <img srcset="./images/common/vlad@1x.jpg 1x, ./images/common/vlad@2x.jpg 2x" src="./images/common/vlad@1x.jpg" alt="Vladislav`s photo"
                             class="reviews__photo"><div class="review__thumb">
                                 <p class="review__text">This is the best ice cream I have ever tried. The best value for money. Pleased with a large selection of flavors. There
                                 are promotions and bonus programs. Nice atmosphere. Recommend.</p>
@@ -74,9 +90,12 @@
                                 <span class="review-dot"></span>
                             </div>
                             <p class="reviwers-data">Vladyslav Ponomarov, Kyiv</p>
+                        </article>
                 </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/anna@1x.jpg 1x, ./images/common/anna@2x.jpg 2x" alt="Anna's photo"
+                    <article class="customers-reviews">
+                        <h3 class="customers-reviews__title visually-hidden">Customers Reviews</h3>
+                    <img srcset="./images/common/anna@1x.jpg 1x, ./images/common/anna@2x.jpg 2x" src="./images/common/anna@1x.jpg" alt="Anna's photo"
                             class="reviews__photo"><div class="review__thumb">
                                 <p class="review__text">It is one of the best places for spending time in hot days and eating ice cream. There are many interesting tastes and
                                 flavors, which you will remember for a long time. Highly recommend this cafe.</p>
@@ -85,9 +104,12 @@
                                 <span class="review-dot"></span>
                             </div>
                             <p class="reviwers-data">Anna Datsiuk, Kyiv</p>
+                        </article>
                 </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/sveta@1x.jpg 1x, ./images/common/sveta@2x.jpg 2x" alt="Svetlana's photo"
+                    <article class="customers-reviews">
+                        <h3 class="customers-reviews__title visually-hidden">Customers Reviews</h3>
+                    <img srcset="./images/common/sveta@1x.jpg 1x, ./images/common/sveta@2x.jpg 2x" src="./images/common/sveta@1x.jpg" alt="Svetlana's photo"
                             class="reviews__photo"><div class="review__thumb">
                                 <p class="review__text">This product like all my family,especially in summer we cannot without ice cream! Everyone eat two packs when it’s hot
                                 weather We like vanilla, mango, chocolate!</p>
@@ -96,9 +118,12 @@
                                 <span class="review-dot"></span>
                             </div>
                             <p class="reviwers-data">Svetlana Savka, Kyiv</p>
+                        </article>
                 </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/lera@1x.jpg 1x, ./images/common/lera@2x.jpg 2x" 
+                    <article class="customers-reviews">
+                        <h3 class="customers-reviews__title visually-hidden">Customers Reviews</h3>
+                    <img srcset="./images/common/lera@1x.jpg 1x, ./images/common/lera@2x.jpg 2x" src="./images/common/lera@1x.jpg"
                             alt="Valeriia's photo" class="reviews__photo">
                             <div class="review__thumb">
                                 <p class="review__text">For me, in addition to excellent taste and reasonable price, it is important that the products are of high quality. Also, I cannot fail to note the pleasant service at the points of sale.</p>
@@ -107,6 +132,7 @@
                                 <span class="review-dot"></span>
                             </div>
                             <p class="reviwers-data">Valeriia Diachenko, Kyiv</p>
+                        </article>
                 </div>
 
             </div>
@@ -114,5 +140,4 @@
         </div>
     
 </div>
-</article>
 </section>
