bug-fix/validator-modal

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -9,21 +9,21 @@
         <p class="modal__title">Do you want some?</p>
         <form class="buy" name="backcall" autocomplete="on">
             <label class="buy__item">
-                <p class="buy__label">Name</p>
+                <span class="buy__label">Name</span>
                 <input class="buy__input" name="name" type="text" placeholder=" ">
             </label>
             <label class="buy__item">
-                <p class="buy__label">Phone number</p>
+                <span class="buy__label">Phone number</span>
                 <input class="buy__input" name="tel" type="tel" placeholder=" ">
             </label>
             <label class="buy__item">
-                <p class="buy__label">E-mail</p>
+                <span class="buy__label">E-mail</span>
                 <input class="buy__input" name="email" type="email" placeholder=" ">
             </label>
             <label class="terms">
                 <input class="terms__input" name="subscribtion-approval" type="checkbox">
                 <span class="checkbox"></span>
-                <p class="terms__text">Yes, I want a lot of <span>IceCream</span></p>
+                <span class="terms__text">Yes, I want a lot of <span>IceCream</span></span>
             </label>
             <button class="modal__submit" type="submit">Connect me!</button>
         </form>
