--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,8 @@
 <footer class="footer" id="footer">
-    <div class="container">
+    <div class="container footer__block">
         <div class="footer__flex">
-            <div class="footer__block">
-                <h3 class="footer__pre-title label">HOMEMADE ICE CREAM MADE</h3>
-                <h2 class="footer__title title">WITH PASSION</h2>
-            </div>
+                <h2 class="footer__pre-title label">HOMEMADE ICE CREAM MADE 
+                    <span class="footer__title title">WITH PASSION</span></h2>
             <div class="footer-social">
                 <ul class="footer-social-list list">
                     <li class="footer-social-list__item">
