--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,23 +1,34 @@
 .footer {
   background-color: $bg-two;
-  &__pre-title {
-    text-align: left;
-    margin-bottom: 17px;
-    @media screen and (min-width: $tablet) {
-      margin-bottom: 16px;
-    }
-    @media screen and (min-width: $desktop) {
-      margin-bottom: 15px;
-    }
+  padding-bottom: 25px;
+  @media screen and (min-width: $tablet) {
+    padding-bottom: 18px;
   }
-  &__title {
+  @media screen and (min-width: $desktop) {
+    padding-bottom: 10px;
+  }
+  &__pre-title {
+    display: flex;
+    flex-direction: column;
+    width: 234px;
     text-align: left;
     margin-bottom: 43px;
     @media screen and (min-width: $tablet) {
       margin-bottom: 0;
+      width: 340px;
     }
     @media screen and (min-width: $desktop) {
       width: 474px;
+    }
+  }
+  &__title {
+    margin-top: 17px;
+    text-align: left;
+    @media screen and (min-width: $tablet) {
+      margin-top: 16px;
+    }
+    @media screen and (min-width: $desktop) {
+      margin-top: 15px;
     }
   }
   &__rights {
@@ -28,30 +39,18 @@
     color: $text-three;
 
     width: 150px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 22px;
-    padding-bottom: 25px;
+    margin: 0 auto;
+    margin-top: 22px;
     @media screen and (min-width: $tablet) {
       line-height: 1.86;
       min-width: 276px;
-      padding-top: 29px;
-      padding-bottom: 18px;
+      margin-top: 29px;
     }
     @media screen and (min-width: $desktop) {
-      padding-top: 9px;
-      padding-bottom: 10px;
+      margin-top: 9px;
     }
   }
-  &__block {
-    width: 234px;
-    @media screen and (min-width: $tablet) {
-      width: 340px;
-    }
-    @media screen and (min-width: $desktop) {
-      width: 474px;
-    }
-  }
+
   &__flex {
     border-bottom: 1px solid #e1e1e1;
     padding-bottom: 43px;
@@ -119,12 +118,6 @@
     @media screen and (min-width: $tablet) {
       width: 34px;
       height: 34px;
-
-      &:hover .footer-social-list__icon,
-      &:focus .footer-social-list__icon {
-        width: 34px;
-        height: 34px;
-      }
     }
   }
   &__item:not(:last-child) {
