created hero modal

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -64,7 +64,7 @@
         </ul>
         <div class="hero__text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-            <a href="" class="arrow">
+            <a href="" class="arrow" data-modal-hero-open>
                 <img srcset=" 
                 ./images/tablet/t-hero-arrow@1x.png 18w, 
                 ./images/tablet/t-hero-arrow@2x.png 36w, 
