--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -20,7 +20,7 @@
         </svg>
     </button>
     </div>
-    <div class="mobile-menu" data-mobile-menu>
+    <div class="mobile-menu" tabindex="-1" data-mobile-menu >
             <button type="button" class="menu__close" data-mobile-menu-close>
                 <svg class="menu__close__btn" aria-label="close menu">
                     <use href="./images/sprite.svg#close" width="14" height="14"></use>
@@ -64,7 +64,7 @@
         </ul>
         <div class="hero__text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-            <a href="" class="arrow" data-modal-hero-open>
+            <button class="arrow" data-modal-hero-open>
                 <img srcset=" 
                 ./images/tablet/t-hero-arrow@1x.png 18w, 
                 ./images/tablet/t-hero-arrow@2x.png 36w, 
@@ -74,7 +74,7 @@
                     (min-width: 768px) 18px" 
                     src="./images/tablet/t-hero-arrow@1x.png"
                     alt="go to">
-            </a>
+            </button>
         </div>
     </div> 
  </div>      
