--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -86,8 +86,8 @@
 </div>
 
 <!-- Facts about milk -->
-<div class="backdrop" data-modal-hero>
-    <div class="modal modal--hero">
+<div class="backdrop backdrop--is-hidden" data-modal-hero>
+    <div class="modal modal--hero ">
         <button type="button" class="modal__btn--close modal__btn--hero" data-modal-hero-close>
             <svg width="18" height="18">
                 <use href="./images/sprite.svg#close"></use>
