--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -20,10 +20,10 @@
                     </li>
                 </ul>
                 <ul class="contacts__contact">
-                    <li>
+                    <li class="contacts-contact__item">
                         <a class="contacts__link" href="tel:+610383766284">+61(0) 383 766 284</a>
                     </li>
-                    <li>
+                    <li class="contacts-contact__item">
                         <a class="contacts__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
                     </li>
                 </ul>
