bug-fix/general

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -98,18 +98,18 @@
             <p>In our products, we use only natural milk from well-known US brands.
             We want to tell you some useful facts about milk.</p>
           <p><span>Drinking milk is perfectly natural</span></p>
-          <p><span>Milk is the only food that you can survive on wholly on,</span>&nbsp;having every nutrient your body needs to live</p>
-          <p><span>Milk has purifying properties</span>&nbsp;and a milk cleanse is a great way to detox your body</p>
-          <p>Milk not only feeds you, but also feeds the bacteria in your gut and many<span>&nbsp;nutrients in milk act as prebiotics</span>to keep your gut bacteria healthy</p>
+          <p><span>Milk is the only food that you can survive on wholly on,</span> having every nutrient your body needs to live</p>
+          <p><span>Milk has purifying properties</span> and a milk cleanse is a great way to detox your body</p>
+          <p>Milk not only feeds you, but also feeds the bacteria in your gut and many<span> nutrients in milk act as prebiotics</span>to keep your gut bacteria healthy</p>
           <p><span>People who drink more milk during formative years, grow taller</span></p>
-          <p><span>Countries that drink milk are smarter</span>&nbsp;and win more Nobel prizes</p>
-          <p><span>Milk is the best recovery drink</span>&nbsp;after a workout or other physical activity. The combination of carbohydrates, fat, protein, and other micronutrients
+          <p><span>Countries that drink milk are smarter</span> and win more Nobel prizes</p>
+          <p><span>Milk is the best recovery drink</span> after a workout or other physical activity. The combination of carbohydrates, fat, protein, and other micronutrients
                     makes milk the premier recovery drink, possibly even more effective than commercially available sports drinks at
                     promoting recovery from strength and endurance exercise</p>
-          <p><span>Milk is the most hydrating beverage you can drink</span>&nbsp;– researchers used water as a control and assigned a value of 1.0 on the Body Hydrating Index (BHI). Skim milk (1.58)
+          <p><span>Milk is the most hydrating beverage you can drink</span> – researchers used water as a control and assigned a value of 1.0 on the Body Hydrating Index (BHI). Skim milk (1.58)
                     and full-fat milk (1.50) were more hydrating than water itself</p>
           <p><span>Lactose Intolerance can be cured</span></p>
-          <p><span>Milk is one of the most nutritionally dense food you can buy</span>&nbsp;-At about 25 cents per serving, milk is a low-cost option with nine nutrients essential to our health including protein,
+          <p><span>Milk is one of the most nutritionally dense food you can buy</span> - At about 25 cents per serving, milk is a low-cost option with nine nutrients essential to our health including protein,
                     calcium, potassium, phosphorous, riboflavin, niacin as well as vitamins A, D and B12.</p>
         </div>
     </div>
