--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -166,7 +166,7 @@
   font-size: 12px;
   line-height: 1.5;
   color: $text-three;
-  transition: $switch;
+  transition: color $switch;
   &:hover,
   &:focus {
     color: $text-accent;
