--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,36 +1,48 @@
 <footer class="footer" id="footer">
-    <div class="container footer__block">
-        <div class="footer__flex">
-                <h2 class="footer__pre-title label">HOMEMADE ICE CREAM MADE 
-                    <span class="footer__title title">WITH PASSION</span></h2>
-            <div class="footer-social">
-                <ul class="footer-social-list list">
-                    <li class="footer-social-list__item">
-                        <a href="https://github.com" target="_blank" class="footer-social-list__link link">
-                            <svg class="footer-social-list__icon">
-                                <use href="./images/sprite.svg#github"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-list__item">
-                        <a href="https://web.telegram.org" target="_blank" class="footer-social-list__link link">
-                            <svg class="footer-social-list__icon">
-                                <use href="./images/sprite.svg#telegram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-list__item">
-                        <a href="https://www.facebook.com" target="_blank" class="footer-social-list__link link">
-                            <svg class="footer-social-list__icon">
-                                <use href="./images/sprite.svg#facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+  <div class="container footer__block">
+    <div class="footer__flex">
+      <h2 class="footer__pre-title label">
+        HOMEMADE ICE CREAM MADE <span class="footer__title title">WITH PASSION</span>
+      </h2>
+      <div class="footer-social">
+        <ul class="footer-social-list list">
+          <li class="footer-social-list__item">
+            <a href="https://github.com" target="_blank" class="footer-social-list__link link">
+              <svg class="footer-social-list__icon">
+                <use href="./images/sprite.svg#github"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-list__item">
+            <a
+              href="https://web.telegram.org"
+              target="_blank"
+              class="footer-social-list__link link"
+            >
+              <svg class="footer-social-list__icon">
+                <use href="./images/sprite.svg#telegram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-list__item">
+            <a
+              href="https://www.facebook.com"
+              target="_blank"
+              class="footer-social-list__link link"
+            >
+              <svg class="footer-social-list__icon">
+                <use href="./images/sprite.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
 
-                <p class="footer-social__text">Feel free to contact <a href="tel:+61(0)383766284" class="footer-social__tel-text link">+61 (0) 383 766 284</a></p>
-            </div>
-        </div>
-        <p class="footer__rights">&copy; 2019 - IceCream. All Rights Reserved.</p>
+        <p class="footer-social__text">
+          Feel free to contact
+          <a href="tel:+61(0)383766284" class="footer-social__tel-text link">+61 (0) 383 766 284</a>
+        </p>
+      </div>
     </div>
+    <p class="footer__rights">&copy; 2022 - Sundae. All Rights Reserved.</p>
+  </div>
 </footer>
