--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -2,12 +2,13 @@
     <div class="container hero__container">
     <header class="header">
         <div class="header__container">
-    <a class="logo" href="./index.html" lang="en">
+    <a class="logo logo-sundae" href="./index.html" lang="en">
         <picture>
             <source srcset="./images/common/logo@1x.png 1x,
                           ./images/common/logo@2x.png 2x"/>
              <img src="./images/common/logo@1x.png" width="199" alt="Icecream logo" />
         </picture>
+        <div class="sundae">Sundae</div>
     </a>
     <button type="button" class="menu__open" data-mobile-menu-open >
         <svg class="menu__open__btn" aria-label="open menu">
